welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: ')' expected but 'return' found.
  return 2
  ^